--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@wault/typings",
   "version": "1.0.0",
   "description": "Types to make cross-platform developement easier",
-  "main": "index.js",
+  "main": "out/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
