--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@wault/typings",
   "version": "1.0.0",
+  "type": "module",
   "description": "Types to make cross-platform developement easier",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
